[package]
name = "interval-task"
version = "0.3.1"
edition = "2021"
authors = ["OGIOS <ogios@foxmail.com>"]
description = "Repeatedly execute a `Task` with fixed time delay. more than `setInterval`"
license = "MIT"
repository = "https://github.com/ogios/interval-task"
keywords = ["interval", "set-interval", "task", "time", "multithreading"]
documentation = "https://docs.rs/interval-task/"

[dependencies]
async-channel = "2.3.1"
spin_sleep = "1.2.0"
