[package]
name = "interval-task"
version = "0.3.4"
edition = "2021"
authors = ["OGIOS <ogios@foxmail.com>"]
description = "Repeatedly execute a `Task` with fixed time delay. more than `setInterval`"
license = "MIT"
repository = "https://github.com/ogios/interval-task"
keywords = ["interval", "set-interval", "task", "time", "multithreading"]
documentation = "https://docs.rs/interval-task/"

[dependencies]
async-channel = { version = "2.3.1", optional = true }

spin_sleep = "1.2.1"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }

[features]
default = []
channel = ["async-channel"]
